--- a/CarouselApplication/App_Data/umbraco.config
+++ b/CarouselApplication/App_Data/umbraco.config
@@ -98,17 +98,122 @@
 <li>Anvende viden om grundlæggende arbejdsmarkedsforhold til at formidle og diskutere aktuelle arbejdsmarkedsmæssige problemstillinger.</li>
 </ul>]]></textSection2>
       </fagMaalOgFormaal>
-      <kUUVarde id="1235" key="beb48ff0-b4b2-430d-bc9a-847ce94276a7" parentID="1204" level="3" creatorID="0" sortOrder="1" createDate="2017-09-21T13:47:22" updateDate="2017-09-21T13:48:07" nodeName="KUU Varde" urlName="kuu-varde" path="-1,1148,1204,1235" isDoc="" nodeType="1232" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1231" nodeTypeAlias="kUUVarde">
+      <kUUVarde id="1235" key="beb48ff0-b4b2-430d-bc9a-847ce94276a7" parentID="1204" level="3" creatorID="0" sortOrder="1" createDate="2017-09-21T13:47:22" updateDate="2017-09-27T12:58:58" nodeName="KUU Varde" urlName="kuu-varde" path="-1,1148,1204,1235" isDoc="" nodeType="1232" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1231" nodeTypeAlias="kUUVarde">
         <pageTitle><![CDATA[KUU Varde]]></pageTitle>
         <siteName><![CDATA[Umbraco Test site]]></siteName>
+        <image1><![CDATA[/media/1057/3ac352669bd370ab1465cc4a6da28bff.jpg]]></image1>
+        <textSection4><![CDATA[<p>4.del</p>
+<ul>
+<li>Dansk D, Afsætning D, Vandbehandling, livredder, hygiejne</li>
+<li>Erhvervstræning</li>
+<li>Vejledning og prøve i præsentationsportfolio. Afstigning til uddannelse eller arbejde.</li>
+</ul>]]></textSection4>
+        <image2><![CDATA[/media/1058/8e4e6aa3b51e3ed2f6bc95f13af290ea.jpg]]></image2>
+        <textSection1><![CDATA[<p>1.del</p>
+<ul>
+<li>Dansk, Matematik afklaring evt. FVU eller specialundervisning.</li>
+<li>Faglige, personlige og sociale screeninger, evt. test i skriftsproglige vanskeligheder.</li>
+<li>I den periode arbejder de på vores værksteder og vi opnår det personlige kendskab til den unge, som skal til for, at dette skal lykkes.</li>
+<li>Arbejdspladskultur, kommunikation, Sikkerhed, værktøj og mindre maskiner, Førstehjælp</li>
+<li>Kendskab til områdets geografi og attraktioner. Naturformidling</li>
+<li>Afklaring og vejledning. Opstart af portfolio</li>
+</ul>]]></textSection1>
+        <textSection2><![CDATA[<p>2.del</p>
+<ul>
+<li>Dansk F, Fremmedsprog tysk E, engelsk E, Informationsteknologi F</li>
+<li>Praktikpladssøgning, Afsætning, Aktivitetsafvikling, bæredygtighed og miljø.</li>
+<li>Vejledning og portfolio.</li>
+<li>Erhvervstræning</li>
+</ul>]]></textSection2>
+        <textSection3><![CDATA[<p>3.del</p>
+<ul>
+<li>Dansk E, Fremmedsprog tysk E, engelsk E, Brancherelateret IT, Iværksætteri, Innovation, Afsætning.</li>
+<li>Afslutning i et fag på D niveau.</li>
+<li>Vejledning og portfolio, opstart af præsentationsportfolio.</li>
+<li>Erhvervstræning</li>
+</ul>]]></textSection3>
       </kUUVarde>
-      <kUURibe id="1236" key="382ef0fa-3d1a-4325-8a23-d81d1b24f6b4" parentID="1204" level="3" creatorID="0" sortOrder="2" createDate="2017-09-21T13:47:33" updateDate="2017-09-21T13:48:23" nodeName="KUU Ribe" urlName="kuu-ribe" path="-1,1148,1204,1236" isDoc="" nodeType="1230" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1229" nodeTypeAlias="kUURibe">
+      <kUURibe id="1236" key="382ef0fa-3d1a-4325-8a23-d81d1b24f6b4" parentID="1204" level="3" creatorID="0" sortOrder="2" createDate="2017-09-21T13:47:33" updateDate="2017-09-27T13:37:40" nodeName="KUU Ribe" urlName="kuu-ribe" path="-1,1148,1204,1236" isDoc="" nodeType="1230" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1229" nodeTypeAlias="kUURibe">
         <pageTitle><![CDATA[KUU Ribe]]></pageTitle>
         <siteName><![CDATA[Umbraco Test site]]></siteName>
+        <image1><![CDATA[/media/1059/group.jpg]]></image1>
+        <textSection4><![CDATA[<p>4.del</p>
+<ul>
+<li>Afsætning D,</li>
+<li>Dansk D, Erhvervsøkonomi D, Fremmedsprog engelsk D, tysk D,</li>
+<li>Informationsteknologi D, Matematik D, Samfundsfag D</li>
+<li>Ernæringsassistentkurser på EUD</li>
+<li>Kurser på Landbrugsskolen: dyrehold, planteavl, landbrugsmaskiner</li>
+<li>Praktik i Ribe VikingeCenter, Ekstern praktik</li>
+<li>Vejledning og prøve i præsentationsportfolio.</li>
+<li>Afstigning til uddannelse eller arbejde.</li>
+</ul>]]></textSection4>
+        <textSection1><![CDATA[<p>1.del</p>
+<ul>
+<li>Faglige, personlige og sociale screeninger</li>
+<li>I den periode arbejder de på vores værksteder og vi opnår det personlige kendskab til den unge, som skal til for, at dette skal lykkes.</li>
+<li>Opstart med korte faglige kurser som landbrugsskolen og EUD/AMU.</li>
+<li>Arbejdspladskultur, Arbejdsplanlægning og samarbejde, Hygiejne,</li>
+<li>Afklaring og vejledning. Opstart af portfolio</li>
+<li>Praktik i Ribe VikingeCenter</li>
+</ul>]]></textSection1>
+        <image2><![CDATA[/media/1060/8d40aba4cf726d174f4f4ab678d89bd1.jpg]]></image2>
+        <textSection2><![CDATA[<p>2.del</p>
+<ul>
+<li>Afsætning F, Dansk F, Erhvervsøkonomi F, Fremmedsprog engelsk F, tysk F,</li>
+<li>Informationsteknologi F, Matematik F, Samfundsfag F</li>
+<li>Praktikpladssøgning, Ernæringsassistentkurser på EUD</li>
+<li>Kurser på Landbrugsskolen: dyrehold, planteavl, landbrugsmaskiner.</li>
+<li>Vejledning og portfolio.</li>
+<li>Praktik i Ribe VikingeCenter</li>
+</ul>]]></textSection2>
+        <textSection3><![CDATA[<p>3.del</p>
+<ul>
+<li>Afsætning E, Dansk E, Erhvervsøkonomi E, Fremmedsprog engelsk E, tysk E,</li>
+<li>Informationsteknologi E, Matematik E,</li>
+<li>Samfundsfag E, Ernæringsassistentkurser på EUD</li>
+<li>Kurser på Landbrugsskolen: dyrehold, planteavl, landbrugsmaskiner</li>
+<li>Praktik i Ribe VikingeCenter</li>
+<li>Erhverstræning</li>
+<li>Afslutning i et fag på D niveau. Vejledning og portfolio, opstart af præsentationsportfolio.</li>
+</ul>]]></textSection3>
       </kUURibe>
-      <kUUVejen id="1237" key="bcbd23d8-cfc6-488a-88a5-db8fbdc0565b" parentID="1204" level="3" creatorID="0" sortOrder="3" createDate="2017-09-21T13:47:44" updateDate="2017-09-21T13:47:54" nodeName="KUU Vejen" urlName="kuu-vejen" path="-1,1148,1204,1237" isDoc="" nodeType="1234" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1233" nodeTypeAlias="kUUVejen">
+      <kUUVejen id="1237" key="bcbd23d8-cfc6-488a-88a5-db8fbdc0565b" parentID="1204" level="3" creatorID="0" sortOrder="3" createDate="2017-09-21T13:47:44" updateDate="2017-09-27T13:47:10" nodeName="KUU Vejen" urlName="kuu-vejen" path="-1,1148,1204,1237" isDoc="" nodeType="1234" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1233" nodeTypeAlias="kUUVejen">
         <pageTitle><![CDATA[KUU Vejen]]></pageTitle>
         <siteName><![CDATA[Umbraco Test site]]></siteName>
+        <textSection2><![CDATA[<p>2.del</p>
+<ul>
+<li>Almen undervisning. Et eller to fag på G-niveau, eller videre på F og E niveau. I samarbejde med IBC eller VUC</li>
+<li>Erhvervslære, samarbejdslære, arbejdspladslære, delvis praktisk arbejde og delvis teoretisk undervisning på VBC, EUD og SOSU.</li>
+<li>Afklaring af assistenter inden for madservice og slagter, mennesker og pleje, service og handel. I samarbejde med VBC, SOSU og EUD.</li>
+<li>Sundhedstema i samarbejde med SOSU, VBC og EUD.</li>
+<li>Vejledning og portfolio.</li>
+</ul>]]></textSection2>
+        <image2><![CDATA[/media/1061/our-people-header.jpg]]></image2>
+        <textSection3><![CDATA[<p>3.del</p>
+<ul>
+<li>Almen undervisning. Et eller to fag på F, E, D niveau. VBC eller VUC</li>
+<li>Erhvervslære, arbejdspladslære, samarbejdslære.</li>
+<li>Erhvervstræning i virksomhed eller produktionsskole.</li>
+<li>Afslutning i et fag på D niveau. Vejledning og portfolio, opstart af præsentationsportfolio.</li>
+</ul>]]></textSection3>
+        <image1><![CDATA[/media/1062/81174556.jpg]]></image1>
+        <textSection1><![CDATA[<p>1.del</p>
+<ul>
+<li>Introduktion, Præsentation af uddannelsen, kontaktperson, uddannelsessted og medkursister.</li>
+<li>Sport og motion. Introduktion til Vejen Idrætscenter. Bl.a. for at styrke deltagernes robusthed og   sundhed. Holddannelse på tværs.</li>
+<li>Almen undervisning. Deltagere Screenes og tilbydes et eller to fag på G-niveau.</li>
+<li>Opstart af de tre fag. Erhvervslære, arbejdspladslære, samarbejdslære, gennem praktisk arbejde enten på Produktionsskolen eller praktikvirksomhed.</li>
+<li>Erhvervelse af hygiejnecertifikat. EUD samarbejdspartner.</li>
+<li>Afklaring og vejledning. Opstart af portfolio</li>
+</ul>]]></textSection1>
+        <textSection4><![CDATA[<p>4.del</p>
+<ul>
+<li>Almen undervisning i et fag på D niveau.</li>
+<li>Op følgende undervisning i elevens valgte tema. VBC, SOSU eller EUD.</li>
+<li>Prøve i D fag.</li>
+<li>Vejledning og prøve i præsentationsportfolio. Afstigning til uddannelse eller arbejde.</li>
+</ul>]]></textSection4>
       </kUUVejen>
     </findUddannelse>
     <linksOgDownloads id="1212" key="7ec64765-d155-4a57-b222-5f5d3702bb21" parentID="1148" level="2" creatorID="0" sortOrder="6" createDate="2017-09-05T10:57:18" updateDate="2017-09-12T14:44:55" nodeName="Links og Downloads" urlName="links-og-downloads" path="-1,1148,1212" isDoc="" nodeType="1210" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1209" nodeTypeAlias="linksOgDownloads">
