Redid inf architecture of Home

--- a/CarouselApplication/App_Data/umbraco.config
+++ b/CarouselApplication/App_Data/umbraco.config
@@ -1,13 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT kUUVejen ANY>
-<!ATTLIST kUUVejen id ID #REQUIRED>
-<!ELEMENT kUURibe ANY>
-<!ATTLIST kUURibe id ID #REQUIRED>
-<!ELEMENT kUUVarde ANY>
-<!ATTLIST kUUVarde id ID #REQUIRED>
-<!ELEMENT fagMaalOgFormaal ANY>
-<!ATTLIST fagMaalOgFormaal id ID #REQUIRED>
-<!ELEMENT contentBase ANY>
+<!DOCTYPE root [<!ELEMENT contentBase ANY>
 <!ATTLIST contentBase id ID #REQUIRED>
 <!ELEMENT feature ANY>
 <!ATTLIST feature id ID #REQUIRED>
@@ -35,6 +27,14 @@
 <!ATTLIST praktiskInfo id ID #REQUIRED>
 <!ELEMENT linksOgDownloads ANY>
 <!ATTLIST linksOgDownloads id ID #REQUIRED>
+<!ELEMENT fagMaalOgFormaal ANY>
+<!ATTLIST fagMaalOgFormaal id ID #REQUIRED>
+<!ELEMENT kUURibe ANY>
+<!ATTLIST kUURibe id ID #REQUIRED>
+<!ELEMENT kUUVarde ANY>
+<!ATTLIST kUUVarde id ID #REQUIRED>
+<!ELEMENT kUUVejen ANY>
+<!ATTLIST kUUVejen id ID #REQUIRED>
 ]>
 <root id="-1">
   <home id="1148" key="c35efcc1-92d1-47df-9139-07510ccb4076" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2017-08-14T14:04:43" updateDate="2017-09-13T12:39:18" nodeName="Hjem" urlName="hjem" path="-1,1148" isDoc="" nodeType="1146" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1145" nodeTypeAlias="home">
