--- a/CarouselApplication/App_Data/umbraco.config
+++ b/CarouselApplication/App_Data/umbraco.config
@@ -37,7 +37,8 @@
 <!ATTLIST kUUVejen id ID #REQUIRED>
 ]>
 <root id="-1">
-  <home id="1148" key="c35efcc1-92d1-47df-9139-07510ccb4076" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2017-08-14T14:04:43" updateDate="2017-09-13T12:39:18" nodeName="Hjem" urlName="hjem" path="-1,1148" isDoc="" nodeType="1146" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1145" nodeTypeAlias="home">
+  <home id="1148" key="c35efcc1-92d1-47df-9139-07510ccb4076" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2017-08-14T14:04:43" updateDate="2017-10-04T20:06:21" nodeName="Hjem" urlName="hjem" path="-1,1148" isDoc="" nodeType="1146" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1145" nodeTypeAlias="home">
+    <siteIcon><![CDATA[/media/1067/golang_sh.ico]]></siteIcon>
     <pageTitle><![CDATA[Hjem]]></pageTitle>
     <siteName><![CDATA[KUU test]]></siteName>
     <pageImage><![CDATA[/media/1039/do_a_thing_text.jpg]]></pageImage>
@@ -57,11 +58,10 @@
 <p>Der oprettes 20 pladser i Esbjerg / Fanø<br />Der oprettes 12 pladser i Varde<br />Der oprettes 10 pladser i Ribe<br />Der oprettes 12 pladser i Vejen</p>
 <p>Fra 2016 fordobles antallet af pladser pr. år.</p>
 <p> </p>
-<p> </p>
-<p>Well obviouisly uoi're not gonna invite 50 poeple over.</p>
-<p>This is your ego</p>
-<p>Down-size your material wealth</p>]]></nyheder>
+<p> </p>]]></nyheder>
     <imageName><![CDATA[Creepster]]></imageName>
+    <nedersteTekst><![CDATA[<p>Vil du være Erhvervs Assistent, og have adgang til en alternativ vej til drømme uddannelsen/jobbet?</p>
+<p>På KUU kan du med udgangspunkt i håndfaste værktøjer, blive uddannet Erhvervs Assistent inden for dit ønskede område. Uddannelsen kombinerer teori og praksis. KUU bliver udbudt af 4 uddannelses centre i Esbjerg, Ribe, Varde og Vejen. Tilsammen tilbyder vi en række spændende erhvervstemaer. Uddannelsen varer 2 år, opdelt i 4 dele. Hele forløbet er SU berettiget! Du vælger selv sammen med din UU-vejleder det erhvervstema som passer bedst på dine mål og drømme.</p>]]></nedersteTekst>
     <findUddannelse id="1204" key="c390f13e-f920-4e9b-8728-82bd8c16aef3" parentID="1148" level="2" creatorID="0" sortOrder="4" createDate="2017-09-05T10:35:36" updateDate="2017-09-21T13:49:42" nodeName="Find Uddannelses centre" urlName="find-uddannelses-centre" path="-1,1148,1204" isDoc="" nodeType="1203" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1202" nodeTypeAlias="findUddannelse">
       <pageTitle><![CDATA[Find Uddannelse]]></pageTitle>
       <siteName><![CDATA[KUU test]]></siteName>
@@ -221,10 +221,13 @@
       <siteName><![CDATA[KUU test]]></siteName>
       <intro><![CDATA[<p>Her kommer der til at være links og Downloads. Store knapper og små knapper... Måske noget tekst.</p>]]></intro>
     </linksOgDownloads>
-    <praktiskInfo id="1211" key="2f5e1ae5-1c35-4af9-8ae1-df4e0df0614a" parentID="1148" level="2" creatorID="0" sortOrder="7" createDate="2017-09-05T10:55:24" updateDate="2017-09-13T12:39:09" nodeName="Praktisk Info" urlName="praktisk-info" path="-1,1148,1211" isDoc="" nodeType="1208" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1207" nodeTypeAlias="praktiskInfo">
+    <praktiskInfo id="1211" key="2f5e1ae5-1c35-4af9-8ae1-df4e0df0614a" parentID="1148" level="2" creatorID="0" sortOrder="7" createDate="2017-09-05T10:55:24" updateDate="2017-10-04T18:27:20" nodeName="Praktisk Info" urlName="praktisk-info" path="-1,1148,1211" isDoc="" nodeType="1208" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="1207" nodeTypeAlias="praktiskInfo">
       <pageTitle><![CDATA[Praktisk Info]]></pageTitle>
       <siteName><![CDATA[KUU test]]></siteName>
-      <info><![CDATA[<p>Her kommer der til at være praktisk info verørende skolerne og uddannelsen generelt.</p>]]></info>
+      <sUImage><![CDATA[/media/1063/red-berries-2718428_1920.jpg]]></sUImage>
+      <centerImage1><![CDATA[/media/1064/cake-2722353_1920.jpg]]></centerImage1>
+      <centerImage2><![CDATA[/media/1065/egg-sandwich-2761894_1920.jpg]]></centerImage2>
+      <centerImage3><![CDATA[/media/1066/garlic-2777304_1920.jpg]]></centerImage3>
     </praktiskInfo>
   </home>
   <slider id="1153" key="d9c6b8d7-3920-419b-aa23-afe32328fd50" parentID="-1" level="1" creatorID="0" sortOrder="1" createDate="2017-08-14T14:14:42" updateDate="2017-08-14T14:14:42" nodeName="slider" urlName="slider" path="-1,1153" isDoc="" nodeType="1149" creatorName="Søren Nielsen" writerName="Søren Nielsen" writerID="0" template="0" nodeTypeAlias="slider">
